# python-pixel-hunter-api

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: create-app.yml  deploy.yml
application-source/: pixel-hunter.postman_collection.json  pyproject.toml  requirements.txt
application-source/.pylint.d/: tests.test_main_1.stats
application-source/app/: bing.html  google.html  main.py
application-source/app/api/: api.py
application-source/app/api/endpoints/: image.py  search.py
application-source/app/core/: constants.py  logging.py
application-source/app/schemas/: search.py
application-source/app/services/: image_service.py  scraper_manager.py
application-source/app/services/engines/: baidu.py  base.py  bing.py  duckduckgo.py  google.py  selenium_ext.py  yandex.py
application-source/app/utilities/: image_utils.py  url_utils.py
application-source/postman/: environment.template.json  pixel-hunter-api.collection.json
application-source/tests/: fix_docstrings.py  test_google_scraper.py  test_main.py
cmd/: _pixel_hunter_api.bat  run.cmd
codebuild/: app.manifest.json  create_app.sh
